refactor(api,dashboard): snapshot filter
